--- a/employee_attrition_prediction.ipynb
+++ b/employee_attrition_prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "employee attrition prediction.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN3N+PWLR/LA27hs0blLSJ1",
+      "authorship_tag": "ABX9TyMsE2oYQBio/eJ5WqfC5ep/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "MBzKWExt5Uo0"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "yfTn4rHg5kzt"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
         "id": "z-LTtPFc52LL",
         "outputId": "8af230e3-ff5a-4dcb-8aaa-023716302ad0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +410,7 @@
         "id": "KGhubejs553L",
         "outputId": "457b4341-ecf4-40f6-f217-c087c1d18638"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +436,7 @@
         "id": "BHJta4dt6Elm",
         "outputId": "3fa3723c-0917-4cab-b7d7-5c00c27f5c11"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +472,7 @@
         "id": "4N9Nw2Rh6IKv",
         "outputId": "3dab008a-549f-41d7-d6cb-1162ba804d93"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +537,7 @@
         "id": "FuSuBs9L6Nv5",
         "outputId": "7b7064fc-bf80-4547-87cf-dc7cdba2eb2b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +565,7 @@
         "id": "eTJ_O4PU6kEz",
         "outputId": "987bd560-3959-433d-f7c6-b307b1f674c0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -592,7 +592,7 @@
         "id": "aVD49ZOy6oq4",
         "outputId": "cb9684aa-98fb-4058-b496-2f1da7a60eb3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
         "id": "NzqGhpFK6voA",
         "outputId": "0d769b1f-ece3-46a8-b012-4bc34d15ee25"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,7 +652,7 @@
         "id": "6nbiT7du6zSi",
         "outputId": "f8155e59-888d-430a-9263-3e55b376ede1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -766,7 +766,7 @@
         "id": "k4x7eLLv67HF",
         "outputId": "e7c72049-e870-40fa-9e21-3e239cd8b9bb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1081,7 +1081,7 @@
       "metadata": {
         "id": "nrOKQPRk734r"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1097,7 +1097,7 @@
         "id": "5dkBdxdo8TdV",
         "outputId": "3ea32b3e-6e56-44bc-cf41-db84c888161c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1414,7 +1414,7 @@
         "id": "-C86ghqr8Z7F",
         "outputId": "385e767d-b03d-4c9b-ecec-36e0b5af99b7"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1451,7 +1451,7 @@
         "id": "Sdbt4ezO8teI",
         "outputId": "593a1e45-8f29-4f76-dd67-7cb352de8107"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1488,7 +1488,7 @@
         "id": "fr35oBIr8_5n",
         "outputId": "560126bd-c7a3-4145-f7ef-8e235d7731bb"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1515,7 +1515,7 @@
         "id": "LAF3L81J9P6-",
         "outputId": "43580414-293e-40e3-b446-2e417f6d105d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1550,7 +1550,7 @@
         "id": "srUNpoAC9cpF",
         "outputId": "05f52f14-7991-4dc7-e580-b430fe808e7b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1585,7 +1585,7 @@
       "metadata": {
         "id": "Sn1gNSjW-LN6"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1602,7 +1602,7 @@
         "id": "1kHQ16Y1-i5B",
         "outputId": "b43bf60a-885a-44f3-c051-1d37ae9eb8f1"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1639,7 +1639,7 @@
         "id": "NxpCgAvz-4H8",
         "outputId": "165a73b0-e4e8-40c3-eafc-bcd67512998d"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1667,7 +1667,7 @@
         "id": "dDXuw-ng_ZjE",
         "outputId": "baf916df-79dc-48e2-b939-d0626e6e7554"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1701,7 +1701,7 @@
       "metadata": {
         "id": "vlr0BMw8_cNH"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1716,7 +1716,7 @@
         "id": "XUfRmH0R_pvZ",
         "outputId": "32c7d5f8-31f4-4f55-b9a7-f81b0b60b7cd"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1742,7 +1742,7 @@
         "id": "j6x0sq2__xIr",
         "outputId": "92773914-8129-4bd5-a7a2-07dff1f4c0b0"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1769,7 +1769,7 @@
         "id": "V1jJ2sR3_9_u",
         "outputId": "fce49d50-c277-493f-d287-ba1ea059da0b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2087,7 +2087,7 @@
       "metadata": {
         "id": "bWqmE24wALLz"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2102,7 +2102,7 @@
         "id": "0D2dzI9NAdh2",
         "outputId": "4440d5ec-6e33-4916-eb9f-5f44337e7efc"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2150,7 +2150,7 @@
       "metadata": {
         "id": "HmCjQZt8AheZ"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2161,7 +2161,7 @@
       "metadata": {
         "id": "fki7cIcVBKlm"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2173,7 +2173,7 @@
       "metadata": {
         "id": "Ng7ZUruHBQAE"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2188,7 +2188,7 @@
         "id": "Y-VASFZnBb9l",
         "outputId": "6fceb9f8-ee33-493b-aefa-ae03596ffe39"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2214,7 +2214,7 @@
         "id": "vmaXU-EEBxZY",
         "outputId": "2344ba6b-aa30-4dd9-f923-e4f52fb0822d"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2240,7 +2240,7 @@
         "id": "t4mUMAFxB1GQ",
         "outputId": "42f5c019-5960-42bd-b390-463b202a020d"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2266,7 +2266,7 @@
         "id": "E7foykixB2uB",
         "outputId": "e946d04a-8db8-41b3-a75f-53cfb1462456"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2300,7 +2300,7 @@
       "metadata": {
         "id": "xVym1AU1B355"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2315,7 +2315,7 @@
         "id": "JOViF568CdlC",
         "outputId": "0c8c2820-7d43-4a78-86b9-0abd867496d2"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2373,7 +2373,7 @@
         "id": "j5x8bYwrCkpd",
         "outputId": "31d0cfda-a991-404b-a781-df1381d6c4cf"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2395,7 +2395,7 @@
       "metadata": {
         "id": "J4hdKIwIEJHN"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2410,7 +2410,7 @@
         "id": "0V7oLf2rEWYF",
         "outputId": "4b2c62e6-b03c-4396-df3a-ecefa992acda"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2445,7 +2445,7 @@
       "metadata": {
         "id": "pnIA3y02EYJ0"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2461,7 +2461,7 @@
         "id": "BtL3cqbAEmqJ",
         "outputId": "7b1b53a8-a42a-446d-ab46-9273a47b7e8d"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2485,7 +2485,7 @@
         "id": "qi9Lh251EwGD",
         "outputId": "a55250df-b27b-461b-9c34-54bd0c0bfbfa"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2523,7 +2523,7 @@
         "id": "50V_I1PeE5Wu",
         "outputId": "e716f856-7106-4ffb-c671-8d2677f72942"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2545,7 +2545,7 @@
       "metadata": {
         "id": "eBCwsWtNFS70"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2562,7 +2562,7 @@
         "id": "EmVLk9UaFeqP",
         "outputId": "97ac916b-f480-4432-f5f6-d357bf704683"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2589,7 +2589,7 @@
         "id": "c_Qd-n63FnIb",
         "outputId": "81a383f8-2997-44ca-9ef5-6003e323e096"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2607,173 +2607,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#finding best parameter"
-      ],
-      "metadata": {
-        "id": "pLtUOHK_GUwQ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import RandomizedSearchCV\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "SJQyK4M9GMNZ"
-      },
-      "execution_count": 62,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "parameters = {\n",
-        "    'penalty':['l1', 'l2', 'elasticnet', 'none'],\n",
-        "    'C':[0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 175, 2.0],\n",
-        "    'solver':['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga'],\n",
-        "    'max_iter':[50, 100, 500, 2000, 5000]\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "iFzAsSnIKp6R"
-      },
-      "execution_count": 69,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "parameters"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kmD_Bj_1IroX",
-        "outputId": "a09c5fd6-73bc-4cd0-f97e-5d69d7f43774"
-      },
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'C': [0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 175, 2.0],\n",
-              " 'max_iter': [50, 100, 500, 2000, 5000],\n",
-              " 'penalty': ['l1', 'l2', 'elasticnet', 'none'],\n",
-              " 'solver': ['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga']}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 70
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "random_cv = RandomizedSearchCV(estimator=clf, param_distributions=parameters, n_iter=10, scoring='roc_auc',\n",
-        "                               n_jobs=-1, cv=5, verbose=3)"
-      ],
-      "metadata": {
-        "id": "hTqSD--lKxge"
-      },
-      "execution_count": 71,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "random_cv.fit(x_train, y_train)"
-      ],
-      "metadata": {
-        "id": "ELYOgk-wJgMP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "random_cv.best_estimator_"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "H5HQTChMJ32t",
-        "outputId": "4ce686ff-8bd6-4f25-8459-abffc44e0f80"
-      },
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LogisticRegression(C=0.75, max_iter=2000, random_state=0)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 73
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "random_cv.best_params_"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "i3WaHs6CLoZ-",
-        "outputId": "979f9da6-8266-44b6-afe4-aebc2e6eb73b"
-      },
-      "execution_count": 74,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'C': 0.75, 'max_iter': 2000, 'penalty': 'l2', 'solver': 'lbfgs'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 74
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "random_cv.best_score_"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hyMslr5OLupw",
-        "outputId": "8fd15994-8ddc-466d-9976-c0cb38b82ecb"
-      },
-      "execution_count": 76,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.8218316013533753"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 76
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "#part 3 final model"
       ],
       "metadata": {
@@ -2784,7 +2617,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "classifer = LogisticRegression(C=0.75, max_iter=2000, random_state=0)\n",
+        "classifer = LogisticRegression(random_state=0)\n",
         "classifer.fit(x_train, y_train)"
       ],
       "metadata": {
@@ -2794,7 +2627,7 @@
         "id": "NQjqn1ElL2rX",
         "outputId": "fba17895-ca3d-4479-a315-ac7fa7296ee4"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2816,7 +2649,7 @@
       "metadata": {
         "id": "waiOer-5Mdze"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2832,7 +2665,7 @@
         "id": "QSQoYJsvMnBh",
         "outputId": "a9c20934-66ee-48c5-cce0-b31c64765b36"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2859,7 +2692,7 @@
         "id": "wfZtdgDHM4J_",
         "outputId": "4839c959-bad4-4e97-e75f-444dc1c839c9"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2896,7 +2729,7 @@
         "id": "d6ThMlbKNUcI",
         "outputId": "1bc8f0bf-82bb-4077-bb3e-56d6b3d54520"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3222,7 +3055,7 @@
       "metadata": {
         "id": "pOwfGRR1M_Zk"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3237,7 +3070,7 @@
         "id": "bg2mNNg9OBjF",
         "outputId": "3cff29ae-25c6-4fd1-b9ee-a7f8de1180a8"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
